--- a/login.html
+++ b/login.html
@@ -28,7 +28,7 @@
                     <li><a href="order.html">我的订单</a></li>
                     <li><a href="user.html">我的文的</a></li>
                     <li>|</li>
-                    <li><a href="shop_cart.html">购物车</a><sup>{{cartCount}}</sup></li>
+                    <li><a href="shop_cart.html">购物车</a></li>
                     <!-- <li>|</li>
                     <li>
                         <a href="javascript:void(0)"><img src="images/favorite_icon.png" alt="">收藏夹</a>
@@ -260,9 +260,9 @@
                 </a>
             </div>
         </div>
-        <div class="copyright">
+        <div class="copyright" id="fcopyright">
             <p class="containe">
-                京公网安备 11000002000001号京ICP证030173号违法和不良信息举报电话：010-59922822
+                {{footerText}}
             </p>
         </div>
     </div>
