--- a/shop_list.html
+++ b/shop_list.html
@@ -28,7 +28,7 @@
                     <li><a href="order.html">我的订单</a></li>
                     <li><a href="user.html">我的文的</a></li>
                     <li>|</li>
-                    <li><a href="shop_cart.html">购物车</a><sup>{{cartCount}}</sup></li>
+                    <li><a href="shop_cart.html">购物车</a></li>
                     <!-- <li>|</li>
                     <li>
                         <a href="javascript:void(0)"><img src="images/favorite_icon.png" alt="">收藏夹</a>
@@ -55,10 +55,10 @@
                         <button @click="searchPro">搜索</button>
                     </div>
                 </div>
-                <div class="header_ad">
+                <!-- <div class="header_ad">
                     <a href="shop_list.html"><img src="images/pro1.png" alt=""></a>
                     <a href="shop_list.html"><img src="images/pro2.png" alt=""></a>
-                </div>
+                </div> -->
             </div>
         </div>
         <div class="nav">
@@ -149,14 +149,14 @@
                     <li :class="{active:subnavText==='商品列表'}">
                         <a href="shop_list.html?type=商品列表">商品列表</a>
                     </li>
-                    <li :class="{active:subnavText==='炊具炖锅'}">
-                        <a href="shop_list.html?type=炊具炖锅">炊具炖锅</a>
+                    <li :class="{active:subnavText==='电饭锅'}">
+                        <a href="shop_list.html?type=电饭锅">电饭锅</a>
                     </li>
-                    <li :class="{active:subnavText==='厨房小电'}">
-                        <a href="shop_list.html?type=厨房小电">厨房小电</a>
+                    <li :class="{active:subnavText==='电压力锅'}">
+                        <a href="shop_list.html?type=电压力锅">电压力锅</a>
                     </li>
-                    <li :class="{active:subnavText==='爆款推荐'}">
-                        <a href="shop_list.html?type=爆款推荐">爆款推荐</a>
+                    <li :class="{active:subnavText==='电炖锅'}">
+                        <a href="shop_list.html?type=电炖锅">电炖锅</a>
                     </li>
                 </ul>
             </div>
@@ -195,7 +195,7 @@
                     <ul>
                         <li v-for="(pro,i) in hostList">
                             <a :href="'pro_details.html?proId='+pro.goods_id">
-                                <img :src="imgServer+pro.goods_img[0]" alt="">
+                                <img :src="imgServer+pro.goods_img[1]" alt="">
                             </a>
                             <a :href="'pro_details.html?proId='+pro.goods_id">
                                 <span>{{pro.goods_name}}</span>
@@ -803,9 +803,9 @@
                 </a>
             </div>
         </div>
-        <div class="copyright">
+        <div class="copyright" id="fcopyright">
             <p class="containe">
-                京公网安备 11000002000001号京ICP证030173号违法和不良信息举报电话：010-59922822
+                {{footerText}}
             </p>
         </div>
     </div>
